Ignores state changes for unknown activities

Patch by Thomas Luebking
BUG:306680